[package]
name = "relay-sr201"
version = "0.2.0"
authors = ["Kyle Manna <kyle@kylemanna.com>"]
edition = "2018"
description = "SR-201 Network Relay Controller"
license = "MIT"
homepage = "https://github.com/kylemanna/relay-sr201"
repository = "https://github.com/kylemanna/relay-sr201"

[dependencies]
regex = "1"
structopt = { version = "0.3" }
